--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
 html{
     // font-size: 62.5%;
     font-size: 52.5%;
-    scroll-behavior: smooth;
 }
 *,
 *::after,
@@ -13,4 +13,7 @@ html{
 body{
     overflow-x: hidden;
     background-color: #141414;
+}
+@media only screen and (max_width: 550px){
+    html, body { height: 100%; overflow: hidden}
 }
